--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     padding: 0 30px;
     position: relative;
+    z-index: 15;
     background-position: center;
     display: flex;
     align-items: center;
