--- a/src/scss/_about-us.scss
+++ b/src/scss/_about-us.scss
@@ -132,6 +132,9 @@
                             box-shadow: 0px 0px 31px rgba(255, 255, 255, 0.55);
                             border-radius: 50px;
                             padding: 12px 40px;
+                            &:hover{
+                                animation: btnEffect 0.3s forwards;
+                            }
                             span{
                                 margin-right: 5px;
                                 img{
@@ -171,6 +174,9 @@
                     padding: 12px 40px;
                     display: flex;
                     width: max-content;
+                    &:hover{
+                        animation: btnEffect 0.3s forwards;
+                    }
                 }
             }
         }
