--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -100,6 +100,8 @@
                                 -webkit-text-fill-color: transparent;
                                 background-clip: text;
                                 text-fill-color: transparent;
+                                -webkit-text-stroke-width: 1px;
+                                -webkit-text-stroke-color: white;
                                 mix-blend-mode: normal;
                             }
                         }
@@ -133,8 +135,10 @@
                             display: flex;
                             align-items: center;
                             width: max-content;
-                            transition: all 0.3s ease;
                             color: #FFFFFF;
+                            &:hover{
+                                animation: btnEffect 0.3s forwards;
+                            }
                             span{
                                 margin-right: 5px;
                                 img{
@@ -165,7 +169,7 @@
         }
         img{
             position: relative;
-            animation: ani 2s infinite ease-out;
+            animation: ani 2s infinite ease-in-out;
             cursor: pointer;
         }
         @keyframes ani{
