--- a/src/scss/_mid-section.scss
+++ b/src/scss/_mid-section.scss
@@ -2,9 +2,9 @@
 @import 'conversion';
 @import 'brands';
 
+
 .mid-section{
-    height: 100vh;
-    overflow: hidden;
+    //overflow: hidden;
     position: relative;
     .backgrounds{
         position: absolute;
@@ -19,7 +19,7 @@
     }
     .model{
         z-index: 3;
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 50%;
         height: 100%;
@@ -30,11 +30,11 @@
         }
     }
     .sub-sections{
-        height: 100vh;
-        overflow: auto;
+        // overflow: auto;
         .sub-section{
             padding: 0 30px;
-            height: 100%;
+            height: 100vh;
+            
             .inner{
                 max-width: 1150px;
                 margin: 0 auto;
