--- a/src/scss/_returns.scss
+++ b/src/scss/_returns.scss
@@ -7,6 +7,7 @@
                 margin-left: 90px;
                 text-transform: uppercase;
                 padding-top: 50px;
+                transition:opacity 2s ease;
                 .top-text{
                     font-family: $lato;
                     font-weight: 900;
@@ -62,6 +63,7 @@
                 border: 1px solid rgba(255, 255, 255, 0.4);
                 border-radius: 24px;
                 background: rgba(31, 31, 31, 0.9);
+                transition: opacity 2s ease;
                 @media(max-width: 767px){
                     top: 370px;
                 }
