--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -26,7 +26,9 @@ html, body {
 }
 body {
     position:relative;
-    
+    &.adminbar{
+      padding-top:32px;
+    }
 }
 a{
   display: inline-block;
