--- a/src/scss/_conversion.scss
+++ b/src/scss/_conversion.scss
@@ -3,6 +3,7 @@
         .inner{
             position: relative;
             .stats{
+                opacity:0;
                 margin-left: 90px;
                 text-transform: uppercase;
                 margin-bottom: 40px;
