--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -16,6 +16,7 @@
 html, body { 
     margin:0;
     padding:0;
+    overflow-x:hidden;
   
     
 *,::after,::before{
@@ -26,9 +27,7 @@ html, body {
 }
 body {
     position:relative;
-    &.adminbar{
-      padding-top:32px;
-    }
+   
 }
 a{
   display: inline-block;
