--- a/src/scss/_mid-section.scss
+++ b/src/scss/_mid-section.scss
@@ -34,7 +34,9 @@
         .sub-section{
             padding: 0 30px;
             height: 100vh;
-            
+            background-repeat:no-repeat;
+            background-position:center top;
+            background-size:cover;
             .inner{
                 max-width: 1150px;
                 margin: 0 auto;
@@ -53,6 +55,7 @@
         width: 100%;
         z-index: 10;
         height: 100px;
+        display:none;
         .button{
             position: absolute;
             left: 50%;
