--- a/src/scss/_about-us.scss
+++ b/src/scss/_about-us.scss
@@ -9,12 +9,42 @@
     .about-us-container{
         max-width: 800px;
         margin: 0 auto;
-        padding: 60px 0 60px;
+        padding: 100px 0 60px;
+        .heading-m{
+            display: none;
+            @media (max-width: 767px) {
+                display: block;
+                font-family: $lato;
+                font-weight: 900;
+                color: black;
+                font-size: 15px;
+                align-self: flex-start;
+                position: relative;
+                line-height: 2.5 ;
+                margin-bottom: 80px;
+                &::after{
+                    position: absolute;
+                    content: "";
+                    bottom: 0;
+                    width: 500px;
+                    left: -30px;
+                    height: 1px;
+                    background-color: rgba(0, 0, 0, 0.2);
+                }
+            }
+        }
         .about-us-top{
             display: flex;
             justify-content: space-between;
+            @media(max-width: 767px){
+                flex-direction: column;
+            }
             .ship-to{
                 width: 45%;
+                @media(max-width: 767px){
+                    width: 100%;
+                    margin-bottom: 120px;
+                }
                 .ship-to-container{
                     .heading{
                         margin-bottom: 20px;
@@ -76,6 +106,12 @@
             }
             .demo{
                 width: 50%;
+                @media(max-width: 767px){
+                    width: 100%;
+                    height: 410px;
+                    scale: 1.2;
+                    margin-bottom: 50px;
+                }
                 .demo-container{
                     background-repeat: no-repeat !important;
                     background-size: cover !important;
@@ -94,11 +130,16 @@
                         background : linear-gradient(180deg, #4C47EF 0%, rgba(76, 71, 239, 0) 129.08%);
                         transform: rotate(-180deg);
                         border-radius: 20px;
+                        @media(max-width: 567px){
+                            border-radius: 0;
+                        }
                     }
                     .demo-heading{
                         position: relative;
                         z-index: 12;
                         margin-bottom: 25px;
+                        max-width: 400px;
+                        margin: 0 auto;
                         h4{
                             font-family: 'Lato';
                             font-style: normal;
@@ -118,6 +159,9 @@
                     .button{
                         position: relative;
                         z-index: 12;
+                        @media(max-width: 767px){
+                            scale: 0.8;
+                        }
                         a{
                             font-family: 'Inter';
                             font-style: normal;
