--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -9,23 +9,48 @@
     background-position: center;
     display: flex;
     align-items: center;
+    @media(max-width:767px){
+        align-items: flex-start;
+        height: auto;
+    }
     .banner-container{
         max-width: 1200px;
         margin: 0 auto;
+        @media(max-width:767px){
+            padding-top: 50px;
+        }
         .banner-inner{
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
+            grid-gap: 85px;
+            @media(max-width:991px){
+                grid-gap: 30px;
+            }
+            @media(max-width:767px){
+                flex-direction: column-reverse;
+                grid-gap: 60px;
+            }
             .left-col{
-                width: 35%;
+                // width: 35%;
+                width: 340px;
+                @media(max-width:400px){
+                    width: 100%;
+                }
                 .left-col-inner{
+                    display: flex;
+                    flex-direction: column;
                     .card{
+                        // margin-right: 85px;
                         height: 540px;
-                        width: 340px;
                         background: #FFFFFF;
                         box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.15);
                         border-radius: 20px;
                         padding-bottom: 15px;
+                        position: relative;
+                        @media(max-width:767px){
+                            height: 470px;
+                        }
                         .gif-container{
                             height: 82%;
                             .gif{
@@ -34,7 +59,7 @@
                                 img{
                                     transform: scale(1.6);
                                     position: absolute;
-                                    z-index: 2222;
+                                    z-index: 10;
                                     width: 524px;
                                     top: -236px;
                                     left: -133px;
@@ -48,8 +73,41 @@
                                 font-style: normal;
                                 font-weight: 500;
                                 font-size: 20px;
-                                line-height: 22px;
+                                line-height: 110%;
                                 color: #000000;
+                                @media(max-width:400px){
+                                    font-size: 18px;
+                                }
+                            }
+                        }
+                        .heading-m{
+                            display: none;
+                            position: absolute;
+                            width: 100%;
+                            z-index: 15;
+                            font-family: $lato;
+                            font-weight: 900;
+                            font-size: 40px;
+                            line-height: 105%;
+                            letter-spacing: 0.07em;
+                            text-transform: uppercase;
+                            background: linear-gradient(185.73deg, #4841D2 9.97%, #0E74F9 113.54%);
+                            -webkit-background-clip: text;
+                            -webkit-text-fill-color: transparent;
+                            background-clip: text;
+                            text-fill-color: transparent;
+                            mix-blend-mode: multiply;
+                            margin-bottom: 20px;
+                            padding: 0 40px;
+                            transform: translateY(calc(-100% - 20px));
+                            @media(max-width: 767px){
+                                display: block;
+                            }
+                            // @media(max-width: 567px){
+                            //     font-size: 48px;
+                            // }
+                            @media(max-width: 400px){
+                                font-size: 38px;
                             }
                         }
                         .gif-rating{
@@ -68,10 +126,42 @@
                             }
                         }
                     }
+                    .banner-button-m{
+                        display: none;
+                        align-self: center;
+                        margin-top: 30px;
+                        padding-bottom: 170px;
+                        @media(max-width:767px){
+                            display: block;
+                        }
+                        a{
+                            background: linear-gradient(274.31deg, #4D44EF 5.99%, #3678E6 95.21%);
+                            border-radius: 50px;
+                            padding: 15px 80px;
+                            font-family: 'Inter';
+                            font-style: normal;
+                            font-weight: 500;
+                            font-size: 18px;
+                            line-height: 22px;
+                            display: flex;
+                            align-items: center;
+                            width: max-content;
+                            color: #FFFFFF;
+                            &:hover{
+                                animation: btnEffect 0.3s forwards;
+                            }
+                            span{
+                                margin-right: 5px;
+                            }
+                        }
+                    }
                 }
             }
             .right-col{
                 width: 60%;
+                @media(max-width:767px){
+                    width: 100%;
+                }
                 .right-col-inner{
                     &.sticky{
                         padding-top:61px;
@@ -81,8 +171,11 @@
                             text-align: center;
                             left:0;
                             right:0;
-                            z-index:11;
+                            z-index:100;
                             margin-bottom:0;
+                            @media(max-width:400px){
+                                padding-left: 30px;
+                            }
                         }
                     }
                     &.black{
@@ -103,6 +196,11 @@
                                 background-clip:text;
                                 color:transparent;
                                 -webkit-background-clip: text;
+                                @media(max-width: 767px){
+                                    opacity: 0;
+                                    transform:scale(1);
+                                    pointer-events: none;
+                                }
                             }
                         }
                     }
@@ -113,21 +211,36 @@
                             font-style: normal;
                             font-weight: 700;
                             font-size: 42.5px;
-                            line-height: 51px;
+                            line-height: 125%;
                             letter-spacing: 0.01em;
                             color: #FFFFFF;
                             transition:all .3s ease;
+                            @media(max-width:767px){
+                                text-align: center;
+                            }
+                            @media(max-width:567px){
+                                transform: translateX(-110px);
+                                font-size: 25px;
+                            }
+                            @media(max-width:400px){
+                                transform: translateX(0);
+                                text-align: left;
+                                padding-left: 0px;
+                            }
                         }
                     }
                     .banner-text{
                         position: relative;
+                        @media(max-width:767px){
+                            display: none;
+                        }
                         .banner-title{
                             h1{
                                 font-family: 'Lato';
                                 font-style: normal;
                                 font-weight: 900;
-                                font-size: 98.9146px;
-                                line-height: 97px;
+                                font-size: 100px;
+                                line-height: 100%;
                                 letter-spacing: 0.07em;
                                 text-transform: uppercase;
                                 background: linear-gradient(196.91deg, rgba(255, 255, 255, 0.51) 16.22%, #FFFFFF 87.48%);
@@ -138,14 +251,27 @@
                                 -webkit-text-stroke-width: 1px;
                                 -webkit-text-stroke-color: white;
                                 mix-blend-mode: normal;
+                                @media(max-width:1200px){
+                                    font-size: 80px;
+                                }
+                                @media(max-width:991px){
+                                    font-size: 70px;
+                                }
                             }
                         }
                         .subtext{
                             position: absolute;
                             width: 48%;
                             right: 0;
-                            bottom: 0;
+                            bottom: 87px;
+                            transform: translateY(100%);
                             z-index: 2;
+                            @media(max-width: 1350px){
+                                position: static;
+                                margin-top: 20px;
+                                transform: translateY(0%);
+                                width: 90%;
+                            }
                             p{
                                 font-family: 'Inter';
                                 font-style: normal;
@@ -158,6 +284,9 @@
                     }
                     .banner-button{
                         margin-top: 30px;
+                        @media(max-width:767px){
+                            display: none;
+                        }
                         a{
                             background: linear-gradient(274.31deg, #4D44EF 5.99%, #3678E6 95.21%);
                             border-radius: 50px;
@@ -190,6 +319,7 @@
         position: absolute;
         bottom: 50px;
         left: 50%;
+        transform: translateX(-50%);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -219,6 +349,7 @@
     .made-for-shopify{
         position:fixed;
         left:0;
+        z-index: 20;
         top:50%;
         transform:translateY(-50%);
         background:#fff;
@@ -226,5 +357,12 @@
         padding-left:20px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
         border-radius: 0px 8px 8px 0px;
+        @media(max-width:767px){
+            left: auto;
+            transform:translateY(0%);
+            right: 0;
+            top: 40px;
+            border-radius: 8px 0px 0px 8px;
+        }
     }
 }
