--- a/src/scss/_conversion.scss
+++ b/src/scss/_conversion.scss
@@ -7,7 +7,13 @@
                 margin-left: 90px;
                 text-transform: uppercase;
                 margin-bottom: 40px;
-                margin-top: 50px;
+                padding-top: 80px;
+                @media(max-width: 767px){
+                    position: absolute;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    margin-left: 0;
+                }
                 .top-text{
                     margin-left: 55px;
                     font-family: $lato;
@@ -23,6 +29,12 @@
                     mix-blend-mode: multiply;
                     position: relative;
                     z-index: 5;
+                    @media(max-width: 567px){
+                        font-size: 30px;
+                    }
+                    @media(max-width: 350px){
+                        font-size: 24px;
+                    }
                 }
                 .numbers{
                     font-family: $lato;
@@ -36,6 +48,15 @@
                     background-clip: text;
                     text-fill-color: transparent;
                     mix-blend-mode: multiply;
+                    @media(max-width: 991px){
+                        font-size: 230px;
+                    }
+                    @media(max-width: 567px){
+                        font-size: 180px;
+                    }
+                    @media(max-width: 350px){
+                        font-size: 150px;
+                    }
                 }
                 .text{
                     margin-left: 55px;
@@ -55,6 +76,13 @@
                     white-space: nowrap;
                     @media(max-width: 767px){
                         white-space: normal;
+                        line-height: 100%;
+                    }
+                    @media(max-width: 567px){
+                        font-size: 30px;
+                    }
+                    @media(max-width: 350px){
+                        font-size: 24px;
                     }
                 }
             }
@@ -69,6 +97,20 @@
                 max-width: 396px;
                 width: 100%;
                 position: relative;
+                @media(max-width: 767px){
+                    top: 400px;
+                    margin-left: 100px;
+                }
+                @media(max-width: 567px){
+                    top: 350px;
+                    margin-left: 0px;
+                    margin-right: 70px;
+                    max-width: none;
+                    width: auto;
+                }
+                @media(max-width: 380px){
+                    margin-right: 30px;
+                }
                 .title{
                     font-family: $lato;
                     font-weight: 900;
@@ -87,6 +129,10 @@
                     font-size: 18px;
                     line-height: 120%;
                     color: #000000;
+                    @media(max-width: 567px){
+                        font-size: 14px;
+                        margin-bottom: 20px;
+                    }
                 }
                 .button{
                     position: absolute;
@@ -102,6 +148,12 @@
                     width: max-content;
                     bottom: -30px;
                     z-index: 5;
+                    @media(max-width: 567px){
+                        left: calc( 50% + 30px);
+                    }
+                    @media(max-width: 400px){
+                        left: 50% ;
+                    }
                     .icon{
                         width: 25px;
                         height: 35px;
