--- a/src/scss/_returns.scss
+++ b/src/scss/_returns.scss
@@ -7,11 +7,17 @@
                 margin-left: 90px;
                 opacity:0;
                 text-transform: uppercase;
-                padding-top: 50px;
+                padding-top: 85px;
                 //transition:opacity 2s ease;
+                @media(max-width: 767px){
+                    position: absolute;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    margin-left: 0;
+                }
                 .top-text{
                     font-family: $lato;
-                    font-weight: 900;
+                    font-weight: 800;
                     font-size: 45px;
                     line-height: 80%;
                     letter-spacing: 0.02em;
@@ -23,10 +29,19 @@
                     mix-blend-mode: multiply;
                     position: relative;
                     z-index: 5;
+                    @media(max-width: 991px){
+                        font-size: 40px;
+                    }
+                    @media(max-width: 567px){
+                        font-size: 30px;
+                    }
+                    @media(max-width: 350px){
+                        font-size: 24px;
+                    }
                 }
                 .numbers{
                     font-family: $lato;
-                    font-weight: 900;
+                    font-weight: 800;
                     font-size: 270px;
                     line-height: 80%;
                     letter-spacing: 0.02em;
@@ -36,10 +51,19 @@
                     background-clip: text;
                     text-fill-color: transparent;
                     mix-blend-mode: multiply;
+                    @media(max-width: 991px){
+                        font-size: 230px;
+                    }
+                    @media(max-width: 567px){
+                        font-size: 180px;
+                    }
+                    @media(max-width: 350px){
+                        font-size: 150px;
+                    }
                 }
                 .text{
                     font-family: $lato;
-                    font-weight: 900;
+                    font-weight: 800;
                     font-size: 60px;
                     line-height: 120%;
                     letter-spacing: 0.02em;
@@ -51,12 +75,21 @@
                     mix-blend-mode: multiply;
                     position: relative;
                     z-index: 5;
+                    @media(max-width: 991px){
+                        font-size: 50px;
+                    }
+                    @media(max-width: 567px){
+                        font-size: 40px;
+                    }
+                    @media(max-width: 350px){
+                        font-size: 32px;
+                    }
                 }
             }
             .description-blurb{
                 position: absolute;
                 z-index: 5;
-                top: 44%;
+                top: 50%;
                 left: 80px;
                 max-width: 300px;
                 width: 100%;
@@ -66,11 +99,15 @@
                 background: rgba(31, 31, 31, 0.9);
                 //transition: opacity 2s ease;
                 @media(max-width: 767px){
-                    top: 370px;
+                    left: 50%;
+                    transform: translateX(calc(-50% - 80px));
                 }
-                @media(max-width:767px){
-                    position: static;
+                @media(max-width: 567px){
+                    transform: translateX(calc(-50% - 20px));
                 }
+                // @media(max-width:767px){
+                //     position: static;
+                // }
                 .heart{
                     position: absolute;
                     cursor: pointer;
@@ -131,7 +168,13 @@
                 z-index: 5;
                 border-radius: 24px;
                 background: white;
-
+                @media(max-width: 767px){
+                    left: 50%;
+                    transform: translateX(calc(-50% + 80px));
+                }
+                @media(max-width: 567px){
+                    transform: translateX(calc(-50% + 20px));
+                }
                 &::before{
                     border-radius: 24px;
                     position: absolute;
