--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -56,13 +56,13 @@
                             .gif{
                                 height: 100%;
                                 position: relative;
-                                img{
-                                    transform: scale(1.6);
+                                video{
+                                    transform: scale(2);
                                     position: absolute;
                                     z-index: 10;
                                     width: 524px;
-                                    top: -236px;
-                                    left: -133px;
+                                    top: -150px;
+                                    left: -130px;
                                 }
                             }
                         }
