--- a/src/scss/_brands.scss
+++ b/src/scss/_brands.scss
@@ -35,6 +35,9 @@
                         border-radius: 0px;
                         height: 340px;
                     }
+                    video{
+                        width:100%;
+                    }
                     img{
                         position: absolute;
                         top: 0;
