--- a/src/scss/_conversion.scss
+++ b/src/scss/_conversion.scss
@@ -48,11 +48,17 @@
                     background-clip: text;
                     text-fill-color: transparent;
                     mix-blend-mode: multiply;
+                    @media(max-width: 1280px){
+                        font-size: 240px;
+                    }
                     @media(max-width: 991px){
                         font-size: 230px;
                     }
+                    @media(max-width: 775px){
+                        font-size: 190px;
+                    }
                     @media(max-width: 567px){
-                        font-size: 180px;
+                        font-size: 170px;
                     }
                     @media(max-width: 350px){
                         font-size: 150px;
@@ -102,7 +108,7 @@
                     margin-left: 100px;
                 }
                 @media(max-width: 567px){
-                    top: 350px;
+                    top: 315px;
                     margin-left: 0px;
                     margin-right: 70px;
                     max-width: none;
@@ -176,6 +182,55 @@
                         font-size: 16px;
                         line-height: 140%;
                     }
+                }
+            }
+        }
+        .banner-bottom-link{
+            position: absolute;
+            bottom: 50px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: center;
+            @media(max-width:1280px){
+                bottom: 25px;
+            }
+            @media(max-width:575px){
+                width: 70%;
+                bottom: 5px;
+                flex-direction: column;
+            }
+            p{
+                font-family: $inter;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 24px;
+                text-align: center;
+                color: #3678E6;
+                margin-left: 5px;
+                white-space: nowrap;
+                @media(max-width:775px){
+                    color: #4C46EF;
+                }
+                @media(max-width:575px){
+                    font-size: 16px;
+                    line-height: 19px;
+                    white-space: unset;
+                }
+            }
+            img{
+                position: relative;
+                animation: ani 2s infinite ease-in-out;
+                cursor: pointer;
+            }
+            @keyframes ani{
+                from{
+                    top : -5px;
+                }
+                to{
+                    top: 10px;
                 }
             }
         }
