--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -1,3 +1,4 @@
+ 
 .banner{
     height: 100vh;
     background-size: cover;
@@ -133,6 +134,10 @@
                         padding-bottom: 170px;
                         @media(max-width:767px){
                             display: block;
+                        }
+                        @media(max-width:575px){
+                            margin-top: 20px;
+                            padding-bottom: 100px;
                         }
                         a{
                             background: linear-gradient(274.31deg, #4D44EF 5.99%, #3678E6 95.21%);
@@ -323,14 +328,21 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        @media(max-width:1280px){
+            bottom: 25px;
+        }
         p{
-            font-family: 'Inter';
+            font-family: $inter;
             font-style: normal;
             font-weight: 500;
             font-size: 20px;
             line-height: 24px;
             text-align: center;
             color: #3678E6;
+            @media(max-width:575px){
+                font-size: 16px;
+                line-height: 19px;
+            }
         }
         img{
             position: relative;
