--- a/src/scss/_brands.scss
+++ b/src/scss/_brands.scss
@@ -35,6 +35,19 @@
                         border-radius: 0px;
                         height: 340px;
                     }
+                    @media(max-width: 550px){
+                        border-radius: 0px;
+                        height: 320px;
+                    }
+                    @media(max-width: 500px){
+                        height: 270px;
+                    }
+                    @media(max-width: 420px){
+                        height: 245px;
+                    }
+                    @media(max-width: 375px){
+                        height: 200px;
+                    }
                     video{
                         width:100%;
                     }
@@ -165,9 +178,9 @@
                 @media(max-width: 991px){
                     font-size: 260px;
                 }
-                @media(max-width: 767px){
-                    font-size: 180px;
-                }
+                // @media(max-width: 767px){
+                //     font-size: 180px;
+                // }
                 @media(max-width: 767px){
                     position: absolute;
                     left: 50%;
@@ -204,6 +217,68 @@
                 white-space: nowrap;
                 @media(max-width: 767px){
                     font-size: 45px;
+                }
+            }
+        }
+        .banner-bottom-link{
+            position: absolute;
+            bottom: 50px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.7));
+            @media(max-width: 1280px){
+                bottom: 25px;
+            }
+            @media(max-width:775px){
+                filter: none;
+            }
+            @media(max-width: 575px){
+                width: 70%;
+                flex-direction: column; 
+            }
+            p{
+                font-family: $inter;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 24px;
+                text-align: center;
+                color: #fff; 
+                white-space: nowrap;
+                @media(max-width:775px){
+                    color: #3678E6;
+                }
+                @media(max-width:575px){
+                    font-size: 16px;
+                    line-height: 19px;
+                }
+            }
+            .desktop{
+                position: relative;
+                animation: ani 2s infinite ease-in-out;
+                cursor: pointer;
+                @media(max-width:575px){
+                    display: none;
+                }
+            }
+            .mobile{
+                position: relative;
+                animation: ani 2s infinite ease-in-out;
+                cursor: pointer;
+                display: none;
+                @media(max-width:575px){
+                    display: block;
+                }
+            }
+            @keyframes ani{
+                from{
+                    top : -5px;
+                }
+                to{
+                    top: 10px;
                 }
             }
         }
