--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -1,4 +1,9 @@
- 
+.all{
+    display: none;
+    &.active{
+        display: block;
+    }
+}
 .banner{
     height: 100vh;
     background-size: cover;
