--- a/src/scss/_mid-section.scss
+++ b/src/scss/_mid-section.scss
@@ -18,18 +18,26 @@
         }
     }
     .model{
-        z-index: 3;
+        z-index: -1;
         position: fixed;
         top: 0;
-        left: 50%;
+        width: 100%;
         height: 100%;
-        transform: translateX(-50%);
-        pointer-events: none;
+        background-repeat:no-repeat;
+        background-position:center top;
+        background-size:cover;
         video{
+            position: absolute;
+            left: 50%;
             height: 100%;
+            transform: translateX(-50%);
+            pointer-events: none;
             &.multiple{
                 display:none;
             }
+        }
+        &.top{
+            z-index: 3;
         }
     }
     .sub-sections{
