--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -63,6 +63,10 @@
                                     width: 524px;
                                     top: -150px;
                                     left: -130px;
+                                    @media(max-width:440px){
+                                        width: 480px;
+                                        left: -105px;
+                                    }
                                 }
                             }
                         }
@@ -113,9 +117,7 @@
                         .gif-rating{
                             margin-top: 10px;
                             padding: 0 40px;
-                            img{
-                                
-                            }
+                            img{ }
                             span{
                                 font-family: 'Inter';
                                 font-style: normal;
