--- a/src/scss/_brands.scss
+++ b/src/scss/_brands.scss
@@ -20,6 +20,28 @@
                     width: calc(100% + 100px);
                     left: -230px;
                 }
+                .ticker{
+                    display: flex;
+                    position: absolute;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    .dot{
+                        margin: 3px;
+                        border: 1px solid gray;
+                        height: 6px;
+                        border-radius: 4px;
+                        width: 50px;
+                        .progress{
+                            height: 100%;
+                            background-color: gray;
+                            width: 0%;
+                            &.active{
+                                width: 100%;
+                                transition: 7s width linear;
+                            }
+                        }
+                    }
+                }
                 .dots{
                     display: flex;
                     justify-content: flex-end;
@@ -76,6 +98,9 @@
                     }
                     video{
                         width:100%;
+                        height: 100%;
+                        scale: 1.01;
+                        object-fit: cover;
                     }
                     img{
                         position: absolute;
