--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -47,3 +47,82 @@ $lato : 'Lato', sans-serif;
         transform: translateX(-150%);
     }
 }
+@keyframes tickerDot1 {
+    0%{
+        width: 0%;
+    }
+    20%{
+        width: 100%;
+    }
+    20.0001%{
+        width: 0%;
+    }
+    100%{
+        width: 0%;
+    }
+}
+@keyframes tickerDot2 {
+    0%{
+        width: 0%;
+    }
+    20%{
+        width: 0%;
+    }
+    40%{
+        width: 100%;
+    }
+    40.0001%{
+        width: 0%;
+    }
+    100%{
+        width: 0%;
+    }
+}
+@keyframes tickerDot3 {
+    0%{
+        width: 0%;
+    }
+    40%{
+        width: 0%;
+    }
+    60%{
+        width: 100%;
+    }
+    60.0001%{
+        width: 0%;
+    }
+    100%{
+        width: 0%;
+    }
+}
+@keyframes tickerDot4 {
+    0%{
+        width: 0%;
+    }
+    60%{
+        width: 0%;
+    }
+    80%{
+        width: 100%;
+    }
+    80.0001%{
+        width: 0%;
+    }
+    100%{
+        width: 0%;
+    }
+}
+@keyframes tickerDot5 {
+    0%{
+        width: 0%;
+    }
+    80%{
+        width: 0%;
+    }
+    99.9999%{
+        width: 100%;
+    }
+    100%{
+        width: 0%;
+    }
+}
