--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -51,6 +51,26 @@
                         @media(max-width:767px){
                             height: 470px;
                         }
+                        .info-box{
+                            font-family: $inter;
+                            font-weight: 700;
+                            font-size: 14px;
+                            line-height: 1.2;
+                            letter-spacing: 0.1em;
+                            text-transform: uppercase;
+                            color: black;
+                            background: rgba(255, 255, 255, 0.6);
+                            backdrop-filter: blur(2px);
+                            padding: 10px 20px;
+                            border-radius: 16px;
+                            // positioning
+                            position: absolute;
+                            z-index: 20;
+                            width: 83%;
+                            left: 50%;
+                            top: 50%;
+                            transform: translateX(-50%) translateY(-50%);
+                        }
                         .gif-container{
                             height: 82%;
                             .gif{
