--- a/src/scss/_brands.scss
+++ b/src/scss/_brands.scss
@@ -244,6 +244,28 @@
                     transform: translateX(-50%);
                 }
             }
+            .info-box{
+                font-family: $inter;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 1.2;
+                letter-spacing: 0.1em;
+                text-transform: uppercase;
+                color: black;
+                background: rgba(255, 255, 255, 0.6);
+                backdrop-filter: blur(2px);
+                padding: 10px 20px;
+                border-radius: 16px;
+                // text-align: right;
+                border: 1px solid rgba(0,0,0, 0.1);
+                // positioning
+                position: absolute;
+                z-index: 20;
+                width: 235px;
+                right: 0%;
+                top: 45%;
+                transform:translateX(25%);
+            }
         }
         .stat-marquee{
             display: flex;
