--- a/src/scss/_conversion.scss
+++ b/src/scss/_conversion.scss
@@ -152,7 +152,7 @@
                     transform: translateX(-50%);
                     left: 50%;
                     width: max-content;
-                    bottom: -30px;
+                    bottom: -35px;
                     z-index: 5;
                     @media(max-width: 567px){
                         left: calc( 50% + 30px);
@@ -183,6 +183,29 @@
                         line-height: 140%;
                     }
                 }
+            }
+            .info-box{
+                opacity: 0;
+                font-family: $inter;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 1.2;
+                letter-spacing: 0.1em;
+                text-transform: uppercase;
+                color: black;
+                background: rgba(255, 255, 255, 0.6);
+                backdrop-filter: blur(2px);
+                padding: 10px 20px;
+                border-radius: 16px;
+                text-align: right;
+                border: 1px solid rgba(0,0,0, 0.1);
+                // positioning
+                position: absolute;
+                z-index: 20;
+                width: 155px;
+                right: 0%;
+                bottom: 0%;
+                transform: translateY(50%);
             }
         }
         .banner-bottom-link{
