--- a/src/scss/_returns.scss
+++ b/src/scss/_returns.scss
@@ -152,9 +152,9 @@
                 }
                 .testimony{
                     font-family: $inter;
-                    font-style: italic;
+                    // font-style: italic;
                     font-weight: 300;
-                    font-size: 14px;
+                    font-size: 18px;
                     line-height: 17px;
                     color: #FFFFFF;
                     opacity: 0.54;
@@ -164,10 +164,35 @@
                     font-family: $inter;
                     font-weight: 300;
                     letter-spacing: 0.5px;
-                    font-size: 14px;
-                    line-height: 17px;
+                    font-size: 18px;
                     color: #FFFFFF;
+                    ul{
+                        margin-left: 20px;
+                    }
                 }
+            }
+            .info-box{
+                opacity: 0;
+                font-family: $inter;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 1.2;
+                letter-spacing: 0.1em;
+                text-transform: uppercase;
+                color: black;
+                background: rgba(255, 255, 255, 0.6);
+                backdrop-filter: blur(2px);
+                padding: 10px 20px;
+                border-radius: 16px;
+                text-align: right;
+                border: 1px solid rgba(0,0,0, 0.1);
+                // positioning
+                position: absolute;
+                z-index: 20;
+                width: 165px;
+                right: 0%;
+                top: 40%;
+                transform: translateY(-50%) translateX(-50%);
             }
             .cta{
                 position: absolute;
