--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -70,6 +70,9 @@
                             left: 50%;
                             top: 50%;
                             transform: translateX(-50%) translateY(-50%);
+                            @media(max-width: 767px){
+                                top: 30%;
+                            }
                         }
                         .gif-container{
                             height: 82%;
@@ -215,7 +218,7 @@
                     &.background-enabled{
                         .animated-text{
                             h4{
-                                background:url("../../../../wp-content/uploads/2023/05/Frame-43.png");
+                                background:url("../../../../wp-content/uploads/2023/05/NightClubZoom-300x168.png");
                                 background-size:contain;
                                 background-position:center center;
                                 transform:scale(2);
